Fix display for non firefox

--- a/audio_od/static/css/dash.css
+++ b/audio_od/static/css/dash.css
@@ -56,7 +56,7 @@ hr {
 	color: lightgrey;
 	transition: color .1s;
 	height: 1rem;
-	overflow: auto;
+	overflow: visible;
 	box-sizing: content-box;
 }
 
